# serpent

./: CMakeLists.txt  README.md
client/: actions.c  actions.h  buttons.c  buttons.h  callbacks.c  callbacks.h  client.c  client.h  client_main.c  context.c  context.h  game.h  input.c  input.h  main.c  menu.c  menu.h  renderer.c  renderer.h  types.h
common/: config.h  event.c  event.h  game_types.h  logging.c  logging.h  protocol.c  protocol.h  queue.c  queue.h  recv.c  recv.h  stack.h  timer.c  timer.h  types.c  types.h
server/: event.c  event.h  events.c  events.h  game.c  game.h  main.c  physics.c  physics.h  registry.c  registry.h  server.c  server.h
